# darknet

./: CMakeLists.txt  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md
cfg/: voc.data  yolov3-voc.cfg
examples/: darknet.c  detector.c  webank.c
logs/: 2019-09-05-1000-global-100-local-4-clients.log.tar.xz  2019-8-31-1000-global-100-local-4-clients.log.tar.xz
src/: cuda.c  cuda.h  data.c  utils.c
